aksNetworkPolicy/networkPolicyDefaultDeny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-egress
  namespace: app2
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          control-plane: "true"
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
  policyTypes:
  - Ingress
  - Egress
